Initial commit - Beat Ampacimon Crew NBA Fantasy App
- Flask web application with Ampacimon branding
- Docker and docker-compose configuration
- Automated daily NBA data updates
- SQLite database with player statistics
- Real-time lineup optimization
- Ready for Portainer deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,41 @@
+# Python
 venv/
 __pycache__/
 *.pyc
-.env
-.vscode/
-.idea/
+*.pyo
+*.pyd
+.Python
+*.so
 *.egg-info/
 dist/
 build/
+
+# Environment
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Data and logs (will be in Docker volumes)
+data/
+logs/
+*.db
+*.log
+
+# Docker build artifacts
+*.tar
+beat-ampacimon-crew.tar
+
+# Temporary files
+*.tmp
+.DS_Store
+Thumbs.db
+
+# Test output
+*.csv
+test_output/
