Reorganize project structure into logical folders
- Created app/ folder for core application modules (web_app, database, etc.)
- Created scripts/ folder for utility and maintenance scripts
- Created config/ folder for configuration files (docker-compose, crontab)
- Created tests/ folder for test and debug scripts
- Moved docs/ folder for all documentation files
- Updated all imports to use new module paths (app., scripts.)
- Updated Dockerfile and docker-compose files for new structure
- Updated shell scripts with correct paths
- Added README files to each folder documenting their purpose
- Added PROJECT_STRUCTURE.md with overview of new organization

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   nba-fantasy:
-    build: .
+    build:
+      context: ..
+      dockerfile: Dockerfile
     container_name: beat-ampacimon-crew
     ports:
       - "5000:5000"  # Expose web application
