Update docker-compose.portainer.yml to build from GitHub repo

--- a/config/docker-compose.portainer.yml
+++ b/config/docker-compose.portainer.yml
@@ -2,6 +2,9 @@ version: '3.8'
 
 services:
   nba-fantasy:
+    build:
+      context: https://github.com/velasvalen17/beat-ampacimon-crew.git#master
+      dockerfile: Dockerfile
     image: beat-ampacimon-crew:latest
     container_name: beat-ampacimon-crew
     ports:
